# coursework

./: .gitattributes  .gitignore
M-World/: .gitignore  README.md
M-World/Afinal/: AndroidManifest.xml
NextGenComm/: .gitignore  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  pom.xml  settings.gradle.kts
ProgramDesignPractice(C,C++)/: .gitignore
ProgramDesignPractice(C,C++)/Task4/SavingEggs/: Background.cpp  Background.h  CMakeLists.txt  Cook.cpp  Cook.h  CookManager.cpp  CookManager.h  Egg.cpp  Egg.h  EggManager.cpp  EggManager.h  Game.cpp  Game.h  GameObjectManager.cpp  GameObjectManager.h  MainMenu.cpp  SavingEggs.vcxproj  SavingEggs.vcxproj.filters  Score.cpp  Score.h  Setting.cpp  SplashScreen.cpp  SplashScreen.h  VisibleGameObject.cpp  VisibleGameObject.h  catchTheEgg.cpp  settings.h  stdafx.h
ProgramDesignPractice(C,C++)/Task4/SavingEggs/include/: Background.hpp  Cook.hpp  CookManager.hpp  Egg.hpp  EggManager.hpp  Game.hpp  GameObjectManager.hpp  MainMenu.hpp  Score.hpp  Settings.hpp  VisibleGameObject.hpp
ProgramDesignPractice(C,C++)/Task4/SavingEggs/media/audio/: 06 千本桜 [オルゴール編].m4a
ProgramDesignPractice(C,C++)/Task4/SavingEggs/media/fonts/: msyhbd.ttc
ProgramDesignPractice(C,C++)/Task4/SavingEggs/media/images/: menu.tga
ProgramDesignPractice(C,C++)/Task4/SavingEggs/source/: Background.cpp  Cook.cpp  CookManager.cpp  Egg.cpp  EggManager.cpp  Game.cpp  GameObjectManager.cpp  MainMenu.cpp  Score.cpp  Setting.cpp  SplashScreen.cpp  VisibleGameObject.cpp  catchTheEgg.cpp
nextgenstorage/: .gitignore  .travis.yml  README.md  tmp
(+1195 files in other folders)
